# src/entities/User.ts
@@ -14,6 +14,18 @@ export class User {
   @Column({ default: 'user' })
   role!: string;
 
+  @Column({ default: -1 })
+  rateLimitBookDetail!: number;
+
+  @Column({ default: -1 })
+  rateLimitBookDownload!: number;
+
+  @Column({ default: -1 })
+  rateLimitBookRelated!: number;
+
+  @Column({ default: -1 })
+  rateLimitSearch!: number;
+
   @CreateDateColumn()
   createdAt!: Date;
 }
